@@ -1,5 +1,13 @@
 [b]Version 0.5.63 (not released yet)[/b]:
 
+(2007-12-08)
+ * Added a new option for the config file: use_volume_option. If set to 
+   true, smplayer will set the initial volume using the command line option
+   -volume in mplayer, so that should avoid that the volume is too loud on
+   startup. But... mplayer doesn't have a -volume option yet, you have to
+   patch it:
+   http://lists.mplayerhq.hu/pipermail/mplayer-users/2007-December/070500.html
+
 (2007-12-05)
  * (By user request) Added a new option for the config file: 
    auto_add_to_playlist. If true, new opened files are added automatically to
